<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">跬步</string>    
    <string name="login">登录</string>
    <string name="onlogining">正在登录</string>
    <string name="action_complete">完成</string>
    <string name="action_logout">登出</string>
    <string name="login_useremail_hint">邮箱</string>
    <string name="login_pwd_hint">密码</string>
    <string name="register_name">注册</string>
    <string name="publish">发布</string>
	<string name="login_name">登录</string>	  
    <string name="share">分享</string>
    <string name="search">搜索</string>
    <string name="preview">预览</string>
    <string name="insert_img">插入图片</string>
    <string name="edit">编辑</string>
    <string name="create_new_cbox">新建收藏夹</string>
    <string name="create_new_cpack">新建集册</string>
    <string name="user_name">姓名</string>
    <string name="user_pwd">密码</string>
    <string name="user_pwdconfirm">确认密码</string>
    <string name="onregistering">正在注册</string>  
    <string name="btn_focus">关注</string>
    <string name="btn_cancel_focus">取消关注</string>
    <string name="add_topic">添加话题(最多5个)</string>    
    <string name="hint_title">标题</string>
    <string name="hint_name">名称</string>
    <string name="hint_extra">简介</string>
    <string name="hint_topic_private">私有(私有集册的内容发布只作为备份，其他人看不到)</string>
    <string name="hint_fbox_private">私有(私有集册只对自己可见)</string>
	<string name="hint_report">举报原因&#8230;</string>
	<string name="hint_advice">你想说些什么&#8230;</string>
	<string name="hint_desc">添加描述</string>
	<string name="hint_search">搜索的话题、收集、人</string>
		
	<string name="report_reason">举报原因</string>
    <string name="empty_view_desc">暂无数据</string>
    <string name="error_view_desc">加载数据出错</string>
    <string name="error_view_retry">重试</string>  
    <string name="error_reload">再次加载</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="onloading">正在加载&#8230;</string>
    
    <string name="topic_text">话题</string>
    <string name="content_text">内容</string>
    <string name="person_text">人</string>
    
    <string name="send_message">发送私信&#8230;</string>
    <string name="send">发送</string>
    <string name="boring_text">不感兴趣</string>
    <string name="funny_text">有意思</string>
    <string name="collect_text">收藏</string>
    <string name="comment_text">评论</string>
    
    <string name="best_collector_text">最佳收集者</string>
    <string name="sex_female">女</string>
    <string name="sex_male">男</string>
    <string name="profession">职业/专业</string>
    <string name="education">教育</string>
    <string name="residence">居住地</string>
    
    <string name="profession_default">暂无职业描述</string>
    <string name="follow_me_text">关注我的人</string>
    <string name="my_follow_text">我关注的人</string>
    <string name="my_pack_text">我的收集册</string>
    
    <string name="my_favoritebox">我的收藏</string>
    <string name="my_topic">我的话题</string>
    <string name="email">邮箱</string>
    <string name="hint_signature">签名</string>
    
    <string name="choose_favoritebox">选择收藏夹</string>
    <string name="focus_topics">关注的话题</string>
    <string name="settings">设置</string>
    <string name="private_letter">私信</string>
    <string name="message">消息</string>
    
    <string name="pictures">图片</string>
    <string name="choose_pics">选择图片</string>
	<string name="handbook">帮助手册</string>        
    <string name="look_at">查看</string>    
    <string name="report">举报</string>
    <string name="like">赞</string>
    <string name="setting_cover">设置封面</string>    
    <string name="contact">联系方式</string>
    <string name="collect_pack_word">文</string>
    <string name="collect_pack_pic">图</string>
    
    <!-- action -->
    <string name="action_create">创建</string>
    <string name="action_modify">修改</string>
    <string name="action_save">保存</string>
  	<string name="create_success">创建成功</string>
  	<string name="create_fail">创建失败</string>
  	<string name="modify_success">修改成功</string>
  	<string name="modify_fail">修改失败</string>  
  	<string name="oper_fail">操作失败</string>
  	<string name="publish_success">发布成功</string>
  	<string name="publish_fail">发布失败</string>
  	<string name="publishing">发布中&#8230;</string>
  	<string name="update_fail">更新失败</string>  
  	<string name="action_search_for">搜索</string>
    <string name="action_notify">通知</string>
    <string name="action_move">移动</string>
    <string name="action_delete">删除</string>
    <string name="action_manage">管理</string>
  	<string name="delete_fail">删除失败</string>
  	<string name="delete_success">删除成功</string>  	
  	<string name="please_input">请填写</string>
  	
    <!-- title -->
    <string name="add_user_pic">添加头像</string>
    <string name="mod_user_pic">修改头像</string>
    
    <string name="home_page">主页</string>
    
    <!-- menu text -->
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
  
    
    <!-- pref-->
    <string name="account_protect">已保护 (邮箱已验证)</string>
    <string name="account_no_protect">未保护 (邮箱待验证)</string>
    
    <!-- welcome activity text-->    
    <string name="drawer_login_by_qq_sort">QQ登录</string>
    <string name="drawer_login_by_sina_sort">微博登录</string>
    <string name="goto_world">开始体验</string>
    <string name="register">注册</string>
    <string name="tip_guide_first">不积跬步    无以至千里</string>
    <string name="tip_guide_second">不积小流    无以成江海</string>
    <string name="tip_guide_third">骐骥一跃    不能十步</string>
    <string name="tip_guide_fourth">驽马十驾    功在不舍</string>
    <string name="tip_guide_fifth">锲而舍之    朽木不折</string>
    <string name="tip_guide_six">锲而不舍    金石可镂</string>

    <string name="actionbar_item_fav_cancel">取消收藏</string>
	<string name="actionbar_item_fav_add">收藏</string>
	<string name="actionbar_item_support">支持</string>
	<string name="actionbar_item_share">分享</string>
	
	<string name="actionbar_item_support_cancel">取消支持</string>
	
	<string name="fav_add_success">添加收藏成功</string>
	<string name="fav_add_fail">添加收藏失败</string>
	<string name="fav_cancel_success">已取消收藏</string>
	
	<!-- prompt -->
	<string name="comment_no_empty">评论内容不能为空</string>
	<string name="write_down_comment">写下你的评论&#8230;</string>
	<string name ="sure_clear_favorite">确定要清空该收藏夹?</string>
	<string name ="load_fail">加载失败</string>
	<string name = "poor_net_state">当前网络状态不好</string>
	<string name = "net_error">网络出错</string>
	<string name="press_again_exit">再按一次退出</string>
	<string name = "received_letter">收到新私信</string>
	<string name = "received_comment">收到新评论</string>
	<string name ="need_login">请先注册登录</string>
	
	<string name="register_fail">注册失败</string>	
	<string name="register_samename">用户名已被使用</string>
	<string name="register_sameemail">邮箱已被使用</string>
	
	<string name="upload_pic_fail">头像上传失败</string>
	<string name="input_text">请输入</string>
	<string name="input_name">请输入姓名</string>
	<string name="input_email">请输入邮箱</string>
	<string name="input_signature">请输入签名</string>
	<string name="input_password">请输入密码</string>
	<string name="password_not_equal">两次输入的密码不一样</string>
	<string name="have_topic">已经有这个话题啦</string>
	<string name="max_topic">最多添加5个话题哦</string>
	<string name="need_topic">还没添加话题呢</string>
	<string name="need_name">还没输入名称呢</string>
	<string name="need_title">添加一个标题吧</string>
	<string name="thanks_for_report">感谢您的举报,我们会尽快处理</string>
	<string name="no_new_version">暂无新版本</string>
	<string name="quest_update">是否更新?</string>
	<string name="update_version">版本更新</string>
	<string name="updating">正在更新&#8230;</string>
	<string name="saving">正在保存&#8230;</string>
	<string name="deleting">正在删除&#8230;</string>
	<string name="get_versioninfo">正在获取版本信息&#8230;</string>
	
	<string name="choose_one">请至少选择一项</string>
	<string name="please_wait">请稍等&#8230;</string>
	<string name="vote_prompt">赞了这条收集</string>
	<string name="comment_prompt">评论了这条收集</string>
	<string name="collect_prompt">收藏了这条收集</string>
	<string name="content_empty">发布内容不能为空</string>
	<string name="empty_name">名称不能为空</string>
	<string name="no_desc">暂无描述</string>
	<string name="note_active">为了您的账号安全,请先登录邮箱激活</string>
		
	<string name="add_desc">添加描述</string>
	<string name="boxtype_not_match">收藏的目录类型不匹配</string>
	<string name="cache_size">当前缓存大小</string>
	<string name="nomore_data">没有数据了</string>
	<string name="word_exceed">输入字数已达上限</string>
	<string name="have_reported">你已经举报过了</string>
	<string name="upload_fail">上传失败</string>
	<string name="upload_success">上传成功</string>
	<string name="input_account">请输入账号和密码.</string>
	<string name="no_this_user">没有此用户,请您先注册</string>
	<string name="pwd_error">密码错误</string>

	<string name="question_upload_log">上传异常日志?</string>
	<string name="no_upload_log">暂无异常日志</string>
		
	<!-- menu text -->
	<string name ="operator">操作</string>
	<string name ="reply">回复</string>
	<string name ="cancel_reply">取消回复</string>
	<string name ="clear_all">清空</string>
	<string name ="exception">异常</string>
	
	<!-- volley error info -->
	<string name ="no_internet">当前网络状态不好</string>
	<string name ="auth_failure">授权过期,请重新登录</string>	
	<string name ="generic_server_down">请求超时</string>
	<string name ="generic_error">服务异常</string>
	
    <array name="array_guide_tips">
        <item>@string/tip_guide_first</item>
        <item>@string/tip_guide_second</item>
        <item>@string/tip_guide_third</item>
        <item>@string/tip_guide_fourth</item>
        <item>@string/tip_guide_fifth</item>
        <item>@null</item>
    </array>
    <!--  -->
    
    <!-- setting page-->
    <string name="setting_aboutme_text">%1$s%2$s%3$s</string>
    
    <!--  -->
</resources>
