<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"   
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/login_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/login_useremail_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_user_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/login_pwd_hint"
        android:inputType="textPassword" />

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin = "16dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        custom:pb_colorComplete="@color/green_complete"
        custom:pb_colorNormal="@color/blue_normal"
        custom:pb_colorPressed="@color/blue_pressed"
        custom:pb_colorProgress="@color/purple_progress"
        custom:pb_textComplete="@string/action_complete"
        custom:pb_textProgress="@string/onlogining" />

</LinearLayout>