<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        
    <item android:id="@+id/menu_item_fav_action_bar"
        android:title="@string/actionbar_item_fav_add"
        android:icon="@drawable/ab_fav_normal"
        app:showAsAction="always"/>

    <item android:id="@+id/menu_item_report_action_bar"
        android:title="@string/report"
        android:icon="@drawable/ic_action_report"
        app:showAsAction="always"/>
    
    <item android:id="@+id/menu_item_share_action_bar"
        android:title="@string/actionbar_item_share"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="always"
        android:visible="false"/>
    
      
</menu>

