<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?listViewBackground"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/favorite_box_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/android_spaces"
        android:layout_marginBottom="@dimen/android_spaces"
        android:layout_marginLeft="@dimen/android_spaces"
        android:layout_marginRight="@dimen/android_spaces"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/favorite_box_type_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|left"
            android:text="@string/collect_pack_word"
            android:checked="true" />

        <RadioButton
            android:id="@+id/favorite_box_type_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|right"
            android:layout_marginLeft="100dp"
            android:text="@string/collect_pack_pic" />
    </RadioGroup>
    
    <EditText
        android:id="@+id/favorite_box_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/android_spaces_medium"
        android:layout_marginRight="@dimen/android_spaces_medium"
        android:hint="@string/hint_name" />

    <EditText
        android:id="@+id/favorite_box_desc_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/android_spaces_medium"
        android:layout_marginRight="@dimen/android_spaces_medium"
        android:hint="@string/hint_extra"  />
   
    <CheckBox
        android:id="@+id/favorte_box_dialog_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/android_spaces_small"
        android:layout_marginLeft="@dimen/android_spaces_medium"
        android:layout_marginRight="@dimen/android_spaces_medium"
        android:layout_marginBottom="@dimen/android_spaces_small"
        android:text="@string/hint_fbox_private" />      
</LinearLayout>