<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.kuibu.custom.widget.FButton
        android:id="@+id/create_favoritebox_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_cbox"
        android:textColor="@android:color/white"
        fbutton:buttonColor="@color/fbutton_color_green_sea"
        fbutton:cornerRadius="1dp"
        fbutton:shadowEnabled="false" />

    <com.kuibu.custom.widget.MultiStateView
        android:id="@+id/multiStateView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/create_favoritebox_bt"
        android:background="?listViewBackground"
        app:msv_emptyView="@layout/empty_view"
        app:msv_errorView="@layout/error_view"
        app:msv_loadingView="@layout/loading_view"
        app:msv_viewState="loading" >

        <ListView
            android:id="@+id/favorite_box_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.kuibu.custom.widget.MultiStateView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/multiStateView"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <com.kuibu.custom.widget.FButton
            android:id="@+id/cancel_choose_box_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            android:textColor="@android:color/white"
            fbutton:buttonColor="@color/fbutton_color_green_sea"
            fbutton:cornerRadius="1dp"
            fbutton:shadowEnabled="false" />

        <com.kuibu.custom.widget.FButton
            android:id="@+id/confirm_choose_box_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0.5dp"
            android:layout_weight="1"
            android:text="@string/btn_confirm"
            android:textColor="@android:color/white"
            fbutton:buttonColor="@color/fbutton_color_green_sea"
            fbutton:cornerRadius="1dp"
            fbutton:shadowEnabled="false" />
    </LinearLayout>

</RelativeLayout>